# Rust-Short

./: .gitignore  Cargo.toml  README.md
ex00/src/: lib.rs  main.rs
ex01/: min.rs
ex01/src/: lib.rs  main.rs
ex02/: print_bytes.rs  yes.rs
ex02/src/: lib.rs  main.rs
ex03/: fizzbuzz.rs
ex03/src/: lib.rs  main.rs
ex04/: Cargo.toml
ex04/src/: lib.rs  main.rs  other.rs  overflow.rs
ex05/src/: main.rs
ex06/src/: lib.rs  main.rs
module00/ex02/: collatz.rs  print_bytes.rs
module00/ex04/: Cargo.toml
module00/ex06/src/: main.rs
module00/ex07/src/: lib.rs
module01/ex01/src/: lib.rs
module01/ex02/src/: lib.rs
module01/ex04/src/: lib.rs
module01/ex05/src/: lib.rs
module01/ex06/src/: lib.rs
module01/ex07/src/: lib.rs
module02/ex03/src/: main.rs
module02/ex04/src/: main.rs
module02/ex06/: Cargo.toml
module02/ex06/src/: lib.rs
module03/ex04/src/: main.rs
module03/ex05/src/: lib.rs
module04/: Cargo.toml
module04/ex00/src/: main.rs
module04/ex01/src/: main.rs
module04/ex04/src/: main.rs
module04/traces/: README.md
module05/: Cargo.toml
module05/traces/: README.md
module06/ex00/src/: lib.rs
